maybe fix horizontal scroll issue?

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -262,6 +262,7 @@
 }
 
 :root {
+  overflow-x: hidden;
   scrollbar-width: thin;
 }
 ::-webkit-scrollbar {
